# ChangeLog for sys-apps/less
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.7 2002/12/13 11:00:31 blizzy Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*less-378 (07 Jul 2002)

  07 Oct 2002; Brandon Low <lostlogic@gentoo.org> less-378.ebuild :
  
  Version bump.

*less-376 (03 Jul 2002)

  03 Oct 2002; Brad Cowan <bcowan@gentoo.org> less-376.ebuild :
  
  Added --sysconfdir=/etc, fixes bug #8639

  14 Jul 2002; phoen][x <phoenix@gentoo.org> less-376.ebuild :
  Added KEYWORDS, SLOT.

  03 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :

  New version; thanks to Terry Chan.

*less-371-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.