@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/less
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.7 2002/12/13 11:00:31 blizzy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.8 2002/12/26 18:43:44 azarah Exp $
+
+*less-378-r1 (26 Dec 2002)
+
+  26 Dec 2002; Martin Schlemmer <azarah@gentoo.org> less-378-r1.ebuild :
+
+  Add /etc/env.d/70less containing 'LESS="-r"' for groff-1.18 and later support.
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
